--- a/non-GPL/EventsTrace/CMakeLists.txt
+++ b/non-GPL/EventsTrace/CMakeLists.txt
@@ -5,8 +5,9 @@
 # you may not use this file except in compliance with the Elastic License 2.0.
 
 add_executable(EventsTrace EventsTrace.c)
-add_dependencies(EventsTrace FileEvents_skeleton libbpf libelf)
-target_link_libraries(EventsTrace ${LIBBPF_LIB} ${LIBELF_LIB} -lz)
+add_dependencies(EventsTrace LibEbpfEvents Probe_skeleton libbpf libelf)
+target_link_libraries(EventsTrace LibEbpfEvents ${LIBBPF_LIB} ${LIBELF_LIB} -lz)
+
 target_include_directories(EventsTrace PRIVATE
     "${LIBBPF_TARGET_INCLUDE_DIR}"
     "${LIBBPF_UAPI_INCLUDE_DIR}"
@@ -14,4 +15,6 @@ target_include_directories(EventsTrace PRIVATE
     "${CMAKE_SOURCE_DIR}/include/"
     "${CMAKE_SOURCE_DIR}/GPL/Events"
     "${TARGET_INCLUDE_DIR}"
+    "${LIBBPF_TARGET_INCLUDE_DIR}"
+    "${LIBBPF_UAPI_INCLUDE_DIR}"
 )
