--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /non-GPL/HostIsolation/KprobeConnectHook/build/
 /non-GPL/HostIsolationMapsUtil/build/
 /non-GPL/TcLoader/build/
+
+# Vim swapfiles
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
