--- a/non-GPL/EventsTrace/CMakeLists.txt
+++ b/non-GPL/EventsTrace/CMakeLists.txt
@@ -8,6 +8,9 @@ add_executable(EventsTrace EventsTrace.c)
 add_dependencies(EventsTrace FileEvents_skeleton libbpf libelf)
 target_link_libraries(EventsTrace ${LIBBPF_LIB} ${LIBELF_LIB} -lz)
 target_include_directories(EventsTrace PRIVATE
+    "${LIBBPF_TARGET_INCLUDE_DIR}"
+    "${LIBBPF_UAPI_INCLUDE_DIR}"
+    "${LIBBPF_INCLUDE_DIR}"
     "${CMAKE_SOURCE_DIR}/include/"
     "${CMAKE_SOURCE_DIR}/GPL/Events"
     "${TARGET_INCLUDE_DIR}"
