Fix broken CMake if statement
Co-Authored-By: Lorenzo Fontana <lorenzo.fontana@elastic.co>

--- a/GPL/EventProbe/CMakeLists.txt
+++ b/GPL/EventProbe/CMakeLists.txt
@@ -20,7 +20,7 @@
 
 # BPF program
 
-if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
+if (CMAKE_BUILD_TYPE STREQUAL Debug)
     set(BPF_DEBUG_TRACE 1)
 else()
     set(BPF_DEBUG_TRACE 0)
