--- a/GPL/EventProbe/CMakeLists.txt
+++ b/GPL/EventProbe/CMakeLists.txt
@@ -51,12 +51,19 @@ message(STATUS "Including: ${EVENTS_PROBE_INCLUDES}")
 set(EVENTS_PROBE_BPF_OUTPUT ${TARGET_EBPF_DIR}/EventProbe.bpf.o)
 add_custom_command(OUTPUT ${EVENTS_PROBE_BPF_OUTPUT}
                   COMMAND ${EBPF_EXTERNAL_ENV_FLAGS} ${CLANG} ${EVENTS_PROBE_CFLAGS} -c ${EVENTS_PROBE_SOURCES} -o ${EVENTS_PROBE_BPF_OUTPUT}
-                  COMMAND ${LLVM_STRIP} -d -g -S ${EVENTS_PROBE_BPF_OUTPUT}
                   DEPENDS libbpf
                   DEPFILE ${EVENTS_PROBE_DEPFILE}
                   COMMENT "[bpf] building ${EVENTS_PROBE_BPF_OUTPUT}")
 
 add_custom_target(BPFEventProbe ALL DEPENDS ${EVENTS_PROBE_BPF_OUTPUT})
+
+if (NOT CMAKE_BUILD_TYPE STREQUAL Debug)
+    add_custom_command(TARGET BPFEventProbe
+        POST_BUILD
+        COMMAND ${LLVM_STRIP} -d -g -S ${EVENTS_PROBE_BPF_OUTPUT}
+        COMMENT "[bpf] stripping ${EVENTS_PROBE_BPF_OUTPUT}")
+endif()
+
 
 # BPF_PROG_TEST_RUN gtests
 add_executable(BPFEventsTests BPFEventsTests.cpp ${GTEST_MAIN})
