Initial commit of BPF multi-kernel tester
All the code here is documented pretty well in README.md, so this commit
message will defer to said file instead of also being 150+ lines.

Currently the tester only works on x86_64, but it shouldn't be that hard
to get it work on aarch64.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,15 @@
 /non-GPL/HostIsolation/KprobeConnectHook/build/
 /non-GPL/HostIsolationMapsUtil/build/
 /non-GPL/TcLoader/build/
+
+# Test results and other stuff in testing/
+testing/bpf-check-summary.txt
+testing/*.cpio
+testing/*.tar
+testing/mainline-kernels
+testing/results/
+testing/testrunner/testrunner
+testing/test_bins/bin/*
+testing/init/bin/*
+testing/kernels
+testing/virtme
