--- a/non-GPL/EventsTrace/CMakeLists.txt
+++ b/non-GPL/EventsTrace/CMakeLists.txt
@@ -6,7 +6,11 @@
 
 add_executable(EventsTrace EventsTrace.c)
 add_dependencies(EventsTrace LibEbpfEvents EventProbe_skeleton libbpf libelf)
-target_link_libraries(EventsTrace LibEbpfEvents ${LIBBPF_LIB} ${LIBELF_LIB} -lz)
+target_link_libraries(EventsTrace LibEbpfEvents ${LIBBPF_LIB} ${LIBELF_LIB} -lz -static)
+
+if (BUILD_STATIC_EVENTSTRACE)
+    target_link_libraries(EventsTrace -static)
+endif()
 
 target_include_directories(EventsTrace PRIVATE
     "${LIBBPF_TARGET_INCLUDE_DIR}"
