--- a/non-GPL/LibEbpfEventsTestLoader/CMakeLists.txt
+++ b/non-GPL/LibEbpfEventsTestLoader/CMakeLists.txt
@@ -5,7 +5,7 @@
 # you may not use this file except in compliance with the Elastic License 2.0.
 
 add_executable(LibEbpfEventsTestLoader LibEbpfEventsTestLoader.c)
-add_dependencies(LibEbpfEventsTestLoader LibEbpfEvents EventProbe_skeleton libbpf libelf)
+add_dependencies(LibEbpfEventsTestLoader LibEbpfEvents libbpf libelf)
 target_link_libraries(LibEbpfEventsTestLoader LibEbpfEvents ${LIBBPF_LIB} ${LIBELF_LIB} -lz)
 
 target_include_directories(LibEbpfEventsTestLoader PRIVATE
