--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,8 @@ include(arch)
 include(BPF)
 include(GoogleTest)
 
+include_directories(non-GPL/include)
+
 add_subdirectory(GPL/HostIsolation/KprobeConnectHook)
 add_subdirectory(GPL/HostIsolation/TcFilter)
 add_subdirectory(GPL/EventProbe)
