--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Test Code Formatting
+      - name: Test code formatting
         run: make test-format
       - name: Cache Hash
         run: echo "GITHUB_CACHE_HASH=$(md5sum Makefile docker/Dockerfile.builder | md5sum | awk '{print $1}')" >> $GITHUB_ENV
@@ -24,11 +24,11 @@ jobs:
             ${{ env.GITHUB_CACHE_HASH }}-v0
       - name: Configure Docker
         run: sudo systemctl stop docker && sudo rm -rf /var/lib/docker && sudo mkdir -p /var/lib/docker && sudo mkdir -p ~/.cache/docker && sudo chown -fR root:root ~/.cache/docker && sudo mount --rbind ~/.cache/docker /var/lib/docker && sudo systemctl start docker
-      - name: Test Build
+      - name: Test build
         run: make build
       - name: Test for any differences post build
         run: git diff --exit-code
       - name: Test container image build
         run: make container
-      - name: Fix Permissions (Last step)
+      - name: Fix permissions (last step)
         run: docker system prune -f && sudo systemctl stop docker && sudo umount /var/lib/docker && sudo chown -R $USER:$USER ~/.cache/docker && sudo rm -rf ~/.cache/docker/volumes/backingFsBlockDev && sudo find ~/.cache/docker -name work | sudo xargs chmod -R 700
