--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -15,8 +15,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Build eBPF probes and userspace components
-      # Enable BPF printk to dump useful information if tests fail
-      run: make build ARCH=${{ matrix.arch }} EXTRA_CMAKE_FLAGS="-DENABLE_BPF_PRINTK=TRUE"
+      run: make build ARCH=${{ matrix.arch }}
     - name: Auth GCP
       uses: 'google-github-actions/auth@v0'
       with:
