--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
         ./run_tests.sh \
         -a ${{ matrix.arch }} \
-        -d /kernel-images \
+        -k /kernel-images/* \
         -e ../artifacts-${{ matrix.arch }}/non-GPL/EventsTrace/EventsTrace
     - name: Archive test summary
       if: always()
