Fix improper getopts usage
An option cannot have > 1 argument. Just put the list kernel images at
the end (no specific flag required).

--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -66,8 +66,8 @@ jobs:
       run: |
         ./run_tests.sh \
         -a ${{ matrix.arch }} \
-        -k /kernel-images/* \
-        -e ../artifacts-${{ matrix.arch }}/non-GPL/EventsTrace/EventsTrace
+        -e ../artifacts-${{ matrix.arch }}/non-GPL/EventsTrace/EventsTrace \
+        /kernel-images/*
     - name: Archive test summary
       if: always()
       uses: actions/upload-artifact@v3
