Greatly clean up bash scripts
- Use readonly/local
- Make conditionals more concise with || and &&
- Pull everything into functions, no naked code
- Standardize on lowercase for local vars
- Make command line arg format consistent
- Rename run_single_test.sh to invoke_qemu.sh, pull out all test logic
  for better separation of concerns
      - Update README.md to suggest usage of invoke_qemu.sh instead of
        directly invoking QEMU
- Add ~/go/bin to PATH in bash instead of workflow YAML
- Greatly clean up GNU parallel invocation

--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -58,15 +58,13 @@ jobs:
       with:
         go-version: '1.17'
     - name: Install Bluebox
-      run: |
-        go install github.com/florianl/bluebox@b8590fb1850f56df6e6d7786931fcabdc1e9173d
-        echo "$HOME/go" >> $GITHUB_PATH
+      run: go install github.com/florianl/bluebox@b8590fb1850f56df6e6d7786931fcabdc1e9173d
     - name: Run tests
       working-directory: testing
       run: |
         ./run_tests.sh \
-        -a ${{ matrix.arch }} \
-        -e ../artifacts-${{ matrix.arch }}/non-GPL/EventsTrace/EventsTrace \
+        ${{ matrix.arch }} \
+        ../artifacts-${{ matrix.arch }}/non-GPL/EventsTrace/EventsTrace \
         /kernel-images/*
     - name: Archive test summary
       if: always()
