Cleanup CMake usage
This commit cleans up the cmake in this repository, removing a lot of
vestigial stuff from when this repo was just host isolation and putting
it in a state where it can be more cleanly built with endpoint.

Changes:

- Remove all the TARGET_* variables in the top level CMakelists.txt,
  push all that logic down to lower subdirectories
- Create a "libbpf" and "libelf" library target, instead of linking
  against ${LIBBPF_LIB} and ${LIBELF_LIB} and then manually including
  the required includes. This puts logic pertaining to where to find
  libbpf includes in cmake/libbpf.cmake instead of GPL/non-GPL, which
  means that we don't have to manually add the libbpf include
  directories and link libraries to every target that links against it.
- Remove a bunch of unneeded comments, message(...) invocations etc.
- Clean up the variables in cmake/libbpf.cmake and document why we need
  the one (LIBBPF_UAPI_INCLUDE_DIR) that remains
- Set ARCH_TRUNC based on ARCH, don't require a higher level project to
  manually specify it

--- a/GPL/Events/CMakeLists.txt
+++ b/GPL/Events/CMakeLists.txt
@@ -5,8 +5,6 @@
 # This software is dual-licensed under the BSD 2-Clause and GPL v2 licenses, you
 # may choose either one of them if you use this software.
 
-# BPF program
-
 if (CMAKE_BUILD_TYPE STREQUAL Debug OR ENABLE_BPF_PRINTK)
     set(BPF_DEBUG_TRACE 1)
 else()
@@ -24,32 +22,25 @@ set(EVENTS_PROBE_CFLAGS
                 -D__TARGET_ARCH_${ARCH_TRUNC}
                 -D__${ARCH}__
                 -I${LIBBPF_TARGET_INCLUDE_DIR}
-                -I${TARGET_INCLUDE_DIR}
-                -I${LIBBPF_UAPI_INCLUDE_DIR}
-                -I${LIBBPF_INCLUDE_DIR}
                 -I${VMLINUX_INCLUDE_DIR}
                 -I${EVENTS_PROBE_SOURCE_DIR}
                 -fno-ident)
 
-configure_file(EbpfEventProto.h ${TARGET_INCLUDE_DIR} COPYONLY)
 set(EVENTS_PROBE_SOURCES ${EVENTS_PROBE_SOURCE_DIR}/EventProbe.bpf.c)
 file(GLOB EVENTS_PROBE_INCLUDES "${EVENTS_PROBE_SOURCE_DIR}/*.h")
-message(STATUS "Including: ${EVENTS_PROBE_INCLUDES}")
 
-set(EVENTS_PROBE_BPF_OUTPUT ${TARGET_EBPF_DIR}/EventProbe.bpf.o)
+set(EVENTS_PROBE_BPF_OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/EventProbe.bpf.o)
 add_custom_command(OUTPUT ${EVENTS_PROBE_BPF_OUTPUT}
                   COMMAND ${EBPF_EXTERNAL_ENV_FLAGS} ${CLANG} ${EVENTS_PROBE_CFLAGS} -c ${EVENTS_PROBE_SOURCES} -o ${EVENTS_PROBE_BPF_OUTPUT}
                   DEPENDS libbpf
-                  DEPFILE ${EVENTS_PROBE_DEPFILE}
-                  COMMENT "[bpf] building ${EVENTS_PROBE_BPF_OUTPUT}")
+                  DEPFILE ${EVENTS_PROBE_DEPFILE})
 
 add_custom_target(BPFEventProbe ALL DEPENDS ${EVENTS_PROBE_BPF_OUTPUT})
 
 if (NOT CMAKE_BUILD_TYPE STREQUAL Debug)
     add_custom_command(TARGET BPFEventProbe
         POST_BUILD
-        COMMAND ${LLVM_STRIP} -d -g -S ${EVENTS_PROBE_BPF_OUTPUT}
-        COMMENT "[bpf] stripping ${EVENTS_PROBE_BPF_OUTPUT}")
+        COMMAND ${LLVM_STRIP} -d -g -S ${EVENTS_PROBE_BPF_OUTPUT})
 endif()
 
 bpf_skeleton(EventProbe)
