--- a/non-GPL/HostIsolation/Demos/CMakeLists.txt
+++ b/non-GPL/HostIsolation/Demos/CMakeLists.txt
@@ -5,12 +5,11 @@
 # you may not use this file except in compliance with the Elastic License 2.0.
 function(add_demo name)
     add_executable("${name}" "${name}.c")
-    target_include_directories(${name} PRIVATE
-        "${LIBBPF_TARGET_INCLUDE_DIR}"
+    target_include_directories(${name}
+        PRIVATE
         "${LIBBPF_UAPI_INCLUDE_DIR}"
-        "${LIBBPF_INCLUDE_DIR}"
         "${PROJECT_SOURCE_DIR}/non-GPL/HostIsolation/Lib")
-    target_link_libraries("${name}" PRIVATE HostIsolation)
+    target_link_libraries("${name}" PRIVATE EbpfHostIsolation)
 endfunction()
 
 add_demo(TcLoaderDemo)
